fix:arrow-collapse_img-banner

--- a/src/scss/components/_banner.scss
+++ b/src/scss/components/_banner.scss
@@ -1,13 +1,12 @@
 .banner {
     position: relative;
 
-
     .bannerBgHome {
-        background-image: url("./imgs/IMG_Banner_Home.jpg");
+        background-image: url("../imgs/IMG_Banner_Home.jpg");
     }
 
     .bannerBgAbout {
-        background-image: url("./imgs/IMG_Banner_About.jpg");
+        background-image: url("../imgs/IMG_Banner_About.jpg");
     }
 
     .bannerBgHome,
