--- a/src/scss/layouts/rentDetails/_rentDetails.scss
+++ b/src/scss/layouts/rentDetails/_rentDetails.scss
@@ -32,7 +32,7 @@
                     color: $color_text_white;
                     padding: 0.5rem 2rem;
                     border-radius: 0.8rem;
-                    //margin: 1rem 0;
+                    text-align: center;
                     margin-top: 1rem;
                 }
             }
